fixing some of meeting book styling and spacing

--- a/src/webparts/meetingBookDetails/components/meeting-book/controls/contentCarouselControl.module.scss
+++ b/src/webparts/meetingBookDetails/components/meeting-book/controls/contentCarouselControl.module.scss
@@ -9,7 +9,7 @@ $dark-grey: #535353;
 $disabled-grey: #9f9f9f;
 $blue: #0061ab;
 $lust: #e30613;
-$pink: #dd1779;
+$pink: #242731;
 $brand-green: #1e96d0;
 $green: lighten($brand-green, 25%);
 $yellow: #f5eb40;
