--- a/src/webparts/meetingBookListView/components/meeting-book-list-view/meetingbooklist.css
+++ b/src/webparts/meetingBookListView/components/meeting-book-list-view/meetingbooklist.css
@@ -3563,7 +3563,7 @@ li.ms-navedit-editArea {
   color: #fff; }
 
 .general__button--brand-secondary {
-  background-color: #dd1779;
+  background-color: #242731;
   color: #fff; }
 
 .general__button--alert {
@@ -3702,8 +3702,8 @@ textarea {
   margin-left: .5em; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #dd1779;
-  border-color: #dd1779; }
+  background-color: #242731;
+  border-color: #242731; }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E"); }
@@ -3828,7 +3828,7 @@ textarea {
   font-weight: 700; }
 
 .ms-DetailsRow-check > .ms-Check.is-checked:before {
-  background-color: #dd1779; }
+  background-color: #242731; }
 
 .ms-DetailsRow:hover, .ms-DetailsRow.is-selected {
   background-color: #f2f2f2;
@@ -3997,8 +3997,8 @@ button,
 .bootstrap-div--padding-left {
   padding-left: 2em !important; }
 
-.row--padding-top {
-  margin-top: .75em !important; }
+/* .row--padding-top {
+  margin-top: .75em !important; } */
 
 .btn-toolbar {
   margin-left: 0 !important; }
@@ -4496,12 +4496,12 @@ li.meeting-book-item ul.list-inline i.fab {
       padding-bottom: 0.5rem;
       padding-top: 0.5rem; }
       .wmg-meeting-book [data-view="grid"] a:hover {
-        color: #dd1779;
+        color: #242731;
         text-decoration: none; }
         .wmg-meeting-book [data-view="grid"] a:hover .item-title {
           text-decoration: none; }
       .wmg-meeting-book [data-view="grid"] a.active {
-        color: #dd1779;
+        color: #242731;
         font-weight: 700; }
     .wmg-meeting-book [data-view="grid"] img {
       width: 100%; }
@@ -4911,7 +4911,7 @@ div#meeting-book-thumbs {
 
   .meeting-book-viewer {
     clear: both !important;
-    padding-top: 70px;
+    padding-top: 50px;
     background-color: #fff !important; }
 
 button.control-arrow.control-prev,
@@ -4964,8 +4964,8 @@ div#meeting-book-thumbs .row .row.meetingbookexpcoll, div#meeting-book-thumbs #c
   margin-top: 0px !important; }
 
 .col-sm-12.meetingbookcarousel {
- width: 95%;
-    padding-left: 3em; }
+ 
+    padding-left: 4em; }
 
 .custom-control.custom-checkbox {
   margin: 0 0 10px 0; }
@@ -5052,8 +5052,8 @@ a.list-group-item:hover {
 .carousel.carousel-slider {
   margin-top: 10px; }
 
-.row.meetingbookthumbs, .meetingbookthumbs#contentRow, #mainContent + div.meetingbookthumbs, ul.slider div {
-  background-color: #fff !important; }
+/* .row.meetingbookthumbs, .meetingbookthumbs#contentRow, #mainContent + div.meetingbookthumbs, ul.slider div {
+  background-color: #fff !important; } */
 
 .row.meetingbookthumbsitems .col-sm-3, .meetingbookthumbsitems#contentRow .col-sm-3, #mainContent + div.meetingbookthumbsitems .col-sm-3, .row.meetingbookthumbsitems #contentRow #sideNavBox, #contentRow .row.meetingbookthumbsitems #sideNavBox, .meetingbookthumbsitems#contentRow #sideNavBox, #mainContent + div.meetingbookthumbsitems #contentRow #sideNavBox, #contentRow #mainContent + div.meetingbookthumbsitems #sideNavBox {
   background-color: #fff !important;
@@ -5085,4 +5085,9 @@ i.fab {
     margin-right: .5em;
     height:3.5em;
     overflow:hidden;
+}
+
+
+.row.meetingbookthumbs, .meetingbookthumbs div, .meetingbookthumbs div div, .row.meetingbookthumbsitems .col-sm-3, .carousel.carousel-slider .control-arrow, li.slide.selected, .row.meetingbookinfo {
+  background: #f9f9f9 !important;
 }
